[gd_scene load_steps=19 format=3 uid="uid://bwqj2x7d6t416"]

[ext_resource type="Script" path="res://enemies/formless_flyer.gd" id="1_vygiu"]
[ext_resource type="Shader" path="res://art/midModulate.gdshader" id="2_jkr8x"]
[ext_resource type="Texture2D" uid="uid://c0satayco5xgm" path="res://art/mob-sheet.png" id="3_8op8w"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rb8pq"]
shader = ExtResource("2_jkr8x")
shader_parameter/modulate = Vector4(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7hqt"]
atlas = ExtResource("3_8op8w")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsoe0"]
atlas = ExtResource("3_8op8w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnnkx"]
atlas = ExtResource("3_8op8w")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_knqtv"]
atlas = ExtResource("3_8op8w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fks6u"]
atlas = ExtResource("3_8op8w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjdvq"]
atlas = ExtResource("3_8op8w")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt2o7"]
atlas = ExtResource("3_8op8w")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dimd1"]
atlas = ExtResource("3_8op8w")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox62w"]
atlas = ExtResource("3_8op8w")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk2q7"]
atlas = ExtResource("3_8op8w")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nm2g"]
atlas = ExtResource("3_8op8w")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_88r8q"]
atlas = ExtResource("3_8op8w")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pepir"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_w7hqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsoe0")
}],
"loop": false,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_gnnkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knqtv")
}],
"loop": false,
"name": &"hit",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fks6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjdvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt2o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dimd1")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox62w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk2q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nm2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88r8q")
}],
"loop": true,
"name": &"walking",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d74yh"]
height = 28.0

[node name="FormlessFlyer" type="CharacterBody2D"]
z_as_relative = false
collision_layer = 8388610
collision_mask = 3
floor_stop_on_slope = false
script = ExtResource("1_vygiu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_rb8pq")
sprite_frames = SubResource("SpriteFrames_pepir")
animation = &"walking"
frame_progress = 0.483087

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_d74yh")

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="RangeTimer" type="Timer" parent="."]

[node name="MeleeTimer" type="Timer" parent="."]

[node name="AlertTimer" type="Timer" parent="."]

[node name="ClearShot" type="RayCast2D" parent="."]
collision_mask = 2048

[node name="HealthBar" type="TextureRect" parent="."]
offset_left = -16.0
offset_top = -25.0
offset_right = 16.0
offset_bottom = -17.0
stretch_mode = 2

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="RangeTimer" to="." method="_on_range_timer_timeout"]
[connection signal="timeout" from="MeleeTimer" to="." method="_on_melee_timer_timeout"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_alert_timer_timeout"]
